--- a/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/docker-compose.yml
+++ b/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/docker-compose.yml
@@ -6,17 +6,17 @@ services:
     volumes:
       - PGDATA:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_PASSWORD: ${POSTGRES_PASS}
     ports:
       - "5433:5432"
     networks:
-      - screenmatch -docker-network
+      - screenmatch-docker-network
 
   pgadmin4:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: "screenmatch@gmail.com"
-      PGADMIN_DEFAULT_PASSWORD: "abc123"
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASS}
     ports:
       - "15432:80"
     depends_on:
