--- a/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/src/main/resources/application.properties
+++ b/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${DB_HOST}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
