--- a/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/src/main/resources/application.properties
+++ b/Java Spring Framework/Java - Persistencia de dados e consultas com Spring Data JPA/3355-java-screenmatch-com-jpa/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DB_HOST}
+spring.datasource.url=jdbc:${DB}://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
