--- a/NodeJS/NodeJS - criando uma API REST com Express e MongoDB/package.json
+++ b/NodeJS/NodeJS - criando uma API REST com Express e MongoDB/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "lint": "eslint . --fix",
+    "prettier": "prettier --write .",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +17,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1",
-    "nodemon": "^3.0.1"
+    "mongoose": "^8.5.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.7.0",
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
+    "nodemon": "^3.0.1",
+    "prettier": "3.3.3"
   }
 }
