--- a/NodeJS/NodeJS - criando uma API REST com Express e MongoDB/docker-compose.yml
+++ b/NodeJS/NodeJS - criando uma API REST com Express e MongoDB/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
+version: "3.8"
 services:
   mongodb:
     image: mongo
     restart: always
     ports:
-      - '27018:27017'
+      - "27018:27017"
     volumes:
       - dbapinode:/data/db
 volumes:
