feat: add an error page for the new server

--- a/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/newServer.conf
+++ b/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/newServer.conf
@@ -6,4 +6,6 @@ server{
       root /Users/whitearctic/dev/nginx;
       index index.html index.htm;
    }
+
+   error_page 404 400 401 /error.html;
 }
