--- a/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/newServer.conf
+++ b/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/newServer.conf
@@ -7,5 +7,9 @@ server{
       index index.html index.htm;
    }
 
+   location ~ \.php$ {
+      proxy_pass http://localhost:8000;
+   }
+
    error_page 404 400 401 /error.html;
 }
