--- a/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/default.conf
+++ b/DevOps/NGINX - servidor web, proxy reverso e API gateway/servers/default.conf
@@ -9,6 +9,14 @@ server {
         proxy_pass http://localhost:8080;
     }
 
+    location /servico1 {
+        proxy_pass http://localhost:8001/;
+    }
+
+    location /servico2 {
+        proxy_pass http://localhost:8002/;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
