--- a/DevOps/NGINX - servidor web, proxy reverso e API gateway/nginx.conf
+++ b/DevOps/NGINX - servidor web, proxy reverso e API gateway/nginx.conf
@@ -11,9 +11,8 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$http_x_real_ip - [$time_local] "$request" '
+                      '$status';
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
     #tcp_nopush     on;
